# FolderCompare

./: .gitignore  CMakeLists.txt  README.md  comparer.cpp  comparer.h  filestruct.h  main.cpp  regexcomparer.cpp  regexcomparer.h
